Fix scrolling modal spacing on mobile

--- a/src/definitions/modules/modal.less
+++ b/src/definitions/modules/modal.less
@@ -372,9 +372,9 @@
 }
 
 @media only screen and (max-width : @computerBreakpoint) {
-  .ui.scrolling.modal {
-    margin-top: @mobileScrollingMargin;
-    margin-bottom: @mobileScrollingMargin;
+  .modals.dimmer .ui.scrolling.modal {
+    margin-top: @mobileScrollingMargin !important;
+    margin-bottom: @mobileScrollingMargin !important;
   }
 }
 
